# intro-to-ds-2024

./: .gitignore  README.md  buildrun.sh
backend/: main.py  pyproject.toml
backend/src/: analysis.py  analytics.py  config.py  node.py  timescale.py
backend/src/analytics/: analytics.py
backend/src/db/: timescale.py
backend/src/migrations/: zero_rides.sql
backend/src/ml/: abstract_wrapper.py  arima_wrapper.py  prophet_wrapper.py
data/: data_transformation.R  eda.R  info_sheet.Rmd  info_sheet.html  technical_report_final.Rmd  trainer.py  xn--HSL_n_nousijamrt-8nbab.csv
data/results/: stations_fromRides.csv
docs/: data_info.md  initial_plan.md  technical_report.md  techreport.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: app.tsx  bikemap.tsx  control-panel.tsx  node-data.tsx  use-drawing-manager.tsx
