[tool.poetry]
name = "bike-pack"
version = "0.1.0"
description = ""
authors = ["Miika Matias <miikapiiparinen24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
Flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
