[tool.poetry]
name = "bike-pack"
version = "0.1.0"
description = ""
authors = ["Miika Matias <miikapiiparinen24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
Flask = "^3.0.3"
pandas = "^2.2.3"
geopy = "^2.4.1"
flask-cors = "^5.0.0"
psycopg = "^3.2.3"
psycopg2 = "^2.9.9"
prophet = "^1.1.6"
logging = "^0.4.9.6"
joblib = "^1.4.2"
sqlalchemy = "^2.0.36"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
